[fix] submit button on ios, change search options overlow fix to use media query

--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,4 +1,5 @@
-.SearchBar {
+.SearchBar
+{
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -8,18 +9,20 @@
   height: 25rem;
 }
 
-.SearchBar-sort-options ul {
+.SearchBar-sort-options ul
+{
   display: flex;
   justify-content: center;
   margin-bottom: 2.22rem;
   color: #ffffff;
 }
 
-.SearchBar-sort-options li {
+.SearchBar-sort-options li
+{
   cursor: pointer;
-  width: 25%;
+  width: 4.33rem;
   border-bottom: 1px solid #fff;
-  padding: 0 1rem .4rem 1rem;
+  padding: 0 2.58rem .33rem 2.58rem;
   line-height: 1.13;
   text-align: center;
   font-weight: 600;
@@ -27,23 +30,27 @@
   transition: color .5s;
 }
 
-.SearchBar-sort-options li:hover {
+.SearchBar-sort-options li:hover
+{
   color: #d4cfcf;
 }
 
 .SearchBar-sort-options li.active,
-.SearchBar-sort-options li.active:hover {
+.SearchBar-sort-options li.active:hover
+{
   border-bottom: 1px solid #f0c36c;
   color: #f0c36c;
 }
 
-.SearchBar-fields {
+.SearchBar-fields
+{
   display: flex;
   justify-content: center;
   margin-bottom: 2.88rem;
 }
 
-.SearchBar-fields input {
+.SearchBar-fields input
+{
   width: 21rem;
   padding: .66rem 1rem;
   margin-right: 2.22rem;
@@ -53,15 +60,18 @@
   font-weight: 500;
 }
 
-.SearchBar-fields input:last-child {
+.SearchBar-fields input:last-child
+{
   margin-right: 0;
 }
 
-.SearchBar-submit {
+.SearchBar-submit
+{
   text-align: center;
 }
 
-.SearchBar-submit input {
+.SearchBar-submit button
+{
   border-radius: 4px;
   padding: .72rem 1.7rem;
   border: 0px;
@@ -72,27 +82,40 @@
   transition: background-color .5s;
 }
 
-.SearchBar-submit a:hover {
+.SearchBar-submit a:hover
+{
   cursor: pointer;
   background-color: #a7874b;
 }
 
-@media only screen and (max-width: 560px) {
-  .SearchBar {
+@media only screen and (max-width: 560px)
+{
+  .SearchBar
+  {
     background-image: url('./background_search_mobile.jpg');
   }
 
-  .SearchBar-sort-options ul {
+  .SearchBar-sort-options ul
+  {
     margin-left: 2rem;
     margin-right: 2rem;
   }
 
-  .SearchBar-fields {
+  .SearchBar-sort-options li
+  {
+    width: 25%;
+    padding: 0 1rem .4rem 1rem;
+
+  }
+
+  .SearchBar-fields
+  {
     flex-direction: column;
     align-items: center;
   }
 
-  .SearchBar-fields input {
+  .SearchBar-fields input
+  {
     margin-right: 0;
     margin-bottom: .86rem;
   }
